ver 0.4.1
- Supported more pixel formats

ver 0.4.0 (Introduced Texconv-Custom-DLL)
- Updated GUI (v0.1.2 to v0.2.1)
- Introduced tempfile for temporary files
- Introduced custom build for texconv (Texconv-Custom-DLL)
- Supported cubemaps
- Improved DDS handling

ver 0.3.3
- Supported UE5.0 assets
- Supported unversioned header
- Supported PF_ASTC_4X4

ver 0.3.2-hotfix
- Fixed a bug check mode won't work if the imported size is not the same as the actual size.


ver 0.3.2
- Added support for Borderlands3
- Removed legacy method (2-step injection with batch files)
- Improved folder method
- Minor updates for GUI

ver 0.3.1
- Added support for UE4.13, 4.14
- Fixed a bug check mode is not working
- Fixed an error when extracting uncompressed HDR textures (FloatRGBA)
- Minor updates for GUI

ver 0.3.0 (Introduced Texconv)
- Added support for tga, hdr, png, jpg, bmp. (You can inject non-dds files.)
- Added support for 4.16, 4.17
- Added --no_mipmaps option

ver 0.2.6
- Added support for 4.15, 4.20~4.24
- Added support for texconv to GUI

ver 0.2.5
- Added check mode (You can check which versions are the same format as your assets)
- Added check mode and export mode to GUI
- Fixed an error when loading assets corrupted by name table editing
- Modified comparison function
- Minor updates for GUI

ver 0.2.4
- Added support for UE4.25 games
- Added support for UE4.26 games
- Minor updates for GUI

ver 0.2.3
- Added support for GUI
- Made folder loader recursive
- Modified data structure
- Improved readability

ver 0.2.2
- Added support for Bloodstained

ver 0.2.1
- Added support for UE4.27 games
- Added support for cube maps
- Fixed an error when loading some assets.

ver 0.2.0 (Supported other UE versions)
- Added support for UE4.18 and UE4.19 games

ver 0.1.7
- Added support for .DDS
- Added feature to specify files in txt
- Fixed an error when loading some assets

ver 0.1.6
- Added support for BC7, DXT5/BC3, BC1
- Removed header files

ver 0.1.5